--- a/.gitignore
+++ b/.gitignore
@@ -1,162 +1,127 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+import discord
+import random
+from discord.ext import commands
 
-# C extensions
-*.so
+import requests
+import os
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+memes = ["proyect 1/Imagenes/meme1.jpg",
+        "proyect 1/Imagenes/meme3.jpeg",
+        "proyect 1/Imagenes/meme4.jpg",
+        "proyect 1/Imagenes/meme5.jpg",
+        "proyect 1/Imagenes/meme6.jpg"]
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+color = ["proyect 1/Imagenes/basura_amarilla.jpeg",
+         "proyect 1/Imagenes/bsaura_verde.jpeg",
+         "proyect 1/Imagenes/basura_marron.jpg",
+         "proyect 1/Imagenes/basura_azul.jpg",
+         "proyect 1/Imagenes/basura_gris.jpg"]
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+info = ["# Contenedor Gris:",
+        "- Desechos no orgánicos (la maquinilla de afeitar).",
+        "- Otros desechos que no se puedan tirar en el resto de papeleras.",
+        "# Contenedor Marrón:",
+        "- Residuos orgánicos (Cascaras de banana, Huesos, restos de comida).",
+        "# Contenedor Azul:",
+        "- Papel y cartón.",
+        "- Otros residuos derivados.",
+        "# Contenedor Verde:",
+        "- Vidrios y envases a partir de este.",
+        "# Contenedor Amarillo:",
+        "- Envases hechos solo de plásticos.",
+        "- Envases como un Brik de leche o una lata de aceitunas con plástico parcialmente en el envase."]
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+comando = ["1.- /hello",
+            "2.- /meme_medioambiente",
+            "3.- /reciclaje_info",
+            "4.- /reciclaje_envases",
+            "5.- /reciclaje_plastico",
+            "6.- /reciclaje_cristal",
+            "7.- /reciclaje_comida",
+            "8.- /reciclaje_desechables",
+            "9.- /reciclaje_carton",
+            "10.- /reciclaje_papel"]
 
-# Translations
-*.mo
-*.pot
+intents = discord.Intents.default()
+intents.message_content = True
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+bot = commands.Bot(command_prefix=('?', '/', '!'), intents=intents)
 
-# Flask stuff:
-instance/
-.webassets-cache
+@bot.event
+async def on_ready():
+    print(f'We have logged in as {bot.user}')
 
-# Scrapy stuff:
-.scrapy
+@bot.command()
+async def comandos(ctx):
+    for i in range(len(comando)):
+        await ctx.send(comando[i])
 
-# Sphinx documentation
-docs/_build/
+@bot.command()
+async def hello(ctx):
+    await ctx.send(f'Hola, soy un bot {bot.user}!')
 
-# PyBuilder
-.pybuilder/
-target/
+@bot.command()
+async def meme_medioambiente(ctx, cantidad: int):
+    for i in range(cantidad):
+        imagen = random.choice(memes)
+        with open(imagen, 'rb') as f:
+            picture = discord.File(f)
+        await ctx.send(file=picture)
 
-# Jupyter Notebook
-.ipynb_checkpoints
+@bot.command()
+async def reciclaje_info(ctx):
+    with open("proyect 1/Imagenes/contenedores.png", 'rb') as f:
+            picture = discord.File(f)
+    await ctx.send(file=picture)
+    for i in range(len(info)):
+        await ctx.send(info[i])
 
-# IPython
-profile_default/
-ipython_config.py
+@bot.command()
+async def reciclaje_envases(ctx):
+    await ctx.send("# Contenedor Amarillo")
+    with open(color[0], 'rb') as f:
+        picture = discord.File(f)
+    await ctx.send(file=picture)
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+@bot.command()
+async def reciclaje_plastico(ctx):
+    await ctx.send("# Contenedor Amarillo")
+    with open(color[0], 'rb') as f:
+        picture = discord.File(f)
+    await ctx.send(file=picture)
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+@bot.command()
+async def reciclaje_cristal(ctx):
+    await ctx.send("# Contenedor Verde")
+    with open(color[1], 'rb') as f:
+        picture = discord.File(f)
+    await ctx.send(file=picture)
+@bot.command()
+async def reciclaje_comida(ctx):
+    await ctx.send("# Contenedor Marrón")
+    with open(color[2], 'rb') as f:
+        picture = discord.File(f)
+    await ctx.send(file=picture)
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
+@bot.command()
+async def reciclaje_desechables(ctx):
+    await ctx.send("# Contenedor Gris")
+    with open(color[4], 'rb') as f:
+        picture = discord.File(f)
+    await ctx.send(file=picture)
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
-.pdm.toml
-.pdm-python
-.pdm-build/
+@bot.command()
+async def reciclaje_carton(ctx):
+    await ctx.send("# Contenedor Azul")
+    with open(color[3], 'rb') as f:
+        picture = discord.File(f)
+    await ctx.send(file=picture)
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+@bot.command()
+async def reciclaje_papel(ctx):
+    await ctx.send("# Contenedor Azul")
+    with open(color[3], 'rb') as f:
+        picture = discord.File(f)
+    await ctx.send(file=picture)
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+bot.run("token")
